--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-
+<!--
 <form action="/users" method="post" accept-charset="UTF-8">
 	
 	<input type="hidden" name="authenticity_token" value"<%= form_authenticity_token %>">
@@ -6,4 +6,11 @@
 	<input type="text" name="[user][email]" value="email" />
 	<input type="submit" value="submit">
 </form>
+-->
 
+<%= form_for(@user) do |f| %>
+  Username: <%= f.text_field :username %>
+  Email: <%= f.text_field :email %>
+  <%= f.submit %>
+  
+<% end %>
